Update content.htm and logfiles.php

--- a/data/content.htm
+++ b/data/content.htm
@@ -28,7 +28,8 @@
       </div>
 
       <!-- Row 3 -->
-      <div class="foo" ref="1">
+      <div class="cld" ref="http://miniserverhome.local/logfiles.php">
+        <p>List of the last 10 log files uploaded by my environmental sensors.</p>
       </div>
       <div>
       </div>
