--- a/data/content.htm
+++ b/data/content.htm
@@ -16,6 +16,10 @@
 	  <p>Pi Hole</p>
          <img height="100%" src="data/images/pihole.png" alt="Pi Hole"/>
       </div>
+	  <div class="height2 nomargin dark cld" ref="http://miniserverhome.local:51821">
+	  <p>Wireguard</p>
+         <img width="100%" src="data/images/wireguard.png" alt="Wireguard"/>
+      </div>
       <!-- Row 2 -->
       <div class="cld" ref="http://miniserverhome.local:9000/">
         <p>Portainer is a universal container management tool that can work with both Docker and Kubernetes to make the deployment and management of containerized applications and services easier and more efficient. Portainer enjoys over 650,000 users and 21,700 GitHub stars, so it's widely used and popular.</p>
@@ -26,7 +30,9 @@
       <div class="cld" ref="http://miniserverhome.local:7000/admin">
         <p>Pi-hole is a Linux network-level advertisement and Internet tracker blocking application which acts as a DNS sinkhole and optionally a DHCP server, intended for use on a private network.</p>
       </div>
-
+      <div class="cld" ref="http://miniserverhome.local:51821">
+        <p>WireGuard: fast, modern, secure VPN tunnel. WireGuard® is an extremely simple yet fast and modern VPN that utilizes state-of-the-art cryptography.</p>
+      </div>
       <!-- Row 3 -->
       <div class="cld" ref="http://miniserverhome.local/logfiles.php">
         <p>List of the last 10 log files uploaded by my environmental sensors.</p>
