Update styles.css, content.htm, and 4 more files...

--- a/data/content.htm
+++ b/data/content.htm
@@ -12,11 +12,11 @@
 	  <p>Grafana</p>
          <img height="100%" src="data/images/grafana.png" alt="Grafana"/>
       </div>
-	  <div class="height2 nomargin dark cld" ref="http://miniserverhome.local:7000/admin">
+	  <div class="height2 nomargin dark foo" ref="http://miniserverhome.local:7000/admin">
 	  <p>Pi Hole</p>
          <img height="100%" src="data/images/pihole.png" alt="Pi Hole"/>
       </div>
-	  <div class="height2 nomargin dark cld" ref="http://miniserverhome.local:51821">
+	  <div class="height2 nomargin bar" ref="http://miniserverhome.local:51821">
 	  <p>Wireguard</p>
          <img width="100%" src="data/images/wireguard.png" alt="Wireguard"/>
       </div>
@@ -30,31 +30,40 @@
       <div class="cld" ref="http://miniserverhome.local:7000/admin">
         <p>Pi-hole is a Linux network-level advertisement and Internet tracker blocking application which acts as a DNS sinkhole and optionally a DHCP server, intended for use on a private network.</p>
       </div>
-      <div class="cld" ref="http://miniserverhome.local:51821">
+      <div class="bar" ref="http://miniserverhome.local:51821">
         <p>WireGuard: fast, modern, secure VPN tunnel. WireGuard® is an extremely simple yet fast and modern VPN that utilizes state-of-the-art cryptography.</p>
       </div>
       <!-- Row 3 -->
-      <div class="cld" ref="http://miniserverhome.local/logfiles.php">
+      <div class="height2 cld" ref="http://miniserverhome.local/logfiles.php">
         <p>List of the last 10 log files uploaded by my environmental sensors.</p>
       </div>
-      <div>
-      </div>
-      <div class="widthHalf cld" ref="3">
-      </div>
-      <div class="widthHalf foo nomargin" ref="http://mobilefoo.com/Products/SlidingNav/DemoVideo.aspx">
-      </div>
+	  <div class="width oth" ref="1">
+	  </div>
+	  <div class="width cld" ref="1">
+	  <p>Home Network</p>	        
+	  </div>
+      <div class="width bar" ref="3">
+	  <p>Last page</p>	        
+	  </div>
     </div>
 
     <!-- Page 1 -->
-    <div title="mobile[foo]">
-      <div class="foo nomargin" ref="http://mobilefoo.com/">
+    <div title="home network">
+      <div class="height3 nomargin bea" ref="http://netmon.local">
+	  <p>netmon.local</p>
+	  <img width="100%" src="data/images/netmon.png" alt="Wireguard"/>
       </div>
-      <div class="width2 foo">
+      <div class="width2 cld">
+	  <p>netgear.local</p>
+	  <img width="100%" src="data/images/netgear.png" alt="Netgear D7000"/>
       </div>
-      <div class="height2 foo nomargin">
+	  <div class="height foo" ref="2">
       </div>
-      <div class="height2 foo" ref="2">
+      <div class="height2 baz">
+	  <p>Network printer</p>
+	  <img height="100%" src="data/images/printer.png" alt="Network printer"/>
       </div>
+
       <div class="foo">
       </div>
       <div class="foo">
