--- a/data/content.htm
+++ b/data/content.htm
@@ -53,13 +53,13 @@
 	  <p>netmon.local</p>
 	  <img width="100%" src="data/images/netmon.png" alt="Wireguard"/>
       </div>
-      <div class="width2 cld">
+      <div class="width2 cld" ref="http://netgear.local">
 	  <p>netgear.local</p>
 	  <img width="100%" src="data/images/netgear.png" alt="Netgear D7000"/>
       </div>
 	  <div class="height foo" ref="2">
       </div>
-      <div class="height2 baz">
+      <div class="height2 baz" ref="http://192.168.1.105">
 	  <p>Network printer</p>
 	  <img height="100%" src="data/images/printer.png" alt="Network printer"/>
       </div>
