--- a/data/content.htm
+++ b/data/content.htm
@@ -61,10 +61,10 @@
       </div>
       <div class="height2 baz" ref="http://192.168.1.105">
 	  <p>Network printer</p>
-	  <img height="100%" src="data/images/printer.png" alt="Cisco AP"/>
+	  <img height="100%" src="data/images/printer.png" alt="Network printer"/>
       </div>
-      <div class="width2 height2 baz" ref="http://ap.local">
-	  <p>Network printer</p>
+      <div class="width2 height2 cld" ref="http://ap.local">
+	  <p>Cisco AP</p>
 	  <img height="100%" src="data/images/ap.png" alt="Cisco AP"/>
       </div>
       <div class="foo">
