--- a/data/content.htm
+++ b/data/content.htm
@@ -1,107 +1,119 @@
 <html>
-  <head><title></title></head>
-  <body>
-    <!-- Page 0 -->
-    <div title="miniserverhome.local">
-      <!-- Row 1 -->
-      <div class="height2 nomargin dark cld" ref="http://miniserverhome.local:9000/">
-	  <p>Portainer</p>
-         <img height="100%" src="data/images/portainer.png" alt="Portainer"/>
-      </div>
-      <div class="height2 nomargin dark oth" ref="http://miniserverhome.local:3000/">
-	  <p>Grafana</p>
-         <img height="100%" src="data/images/grafana.png" alt="Grafana"/>
-      </div>
-	  <div class="height2 nomargin dark foo" ref="http://miniserverhome.local:7000/admin">
-	  <p>Pi Hole</p>
-         <img height="100%" src="data/images/pihole.png" alt="Pi Hole"/>
-      </div>
-	  <div class="height2 nomargin bar" ref="http://miniserverhome.local:51821">
-	  <p>Wireguard</p>
-         <img width="100%" src="data/images/wireguard.png" alt="Wireguard"/>
-      </div>
-      <!-- Row 2 -->
-      <div class="cld" ref="http://miniserverhome.local:9000/">
-        <p>Portainer is a universal container management tool that can work with both Docker and Kubernetes to make the deployment and management of containerized applications and services easier and more efficient. Portainer enjoys over 650,000 users and 21,700 GitHub stars, so it's widely used and popular.</p>
-      </div>
-      <div class="oth" ref="http://miniserverhome.local:3000/">
-        <p>Grafana is a multi-platform open source analytics and interactive visualization web application. It provides charts, graphs, and alerts for the web when connected to supported data sources. It can be easily installed using Docker or Docker Compose.</p>
-      </div>
-      <div class="cld" ref="http://miniserverhome.local:7000/admin">
-        <p>Pi-hole is a Linux network-level advertisement and Internet tracker blocking application which acts as a DNS sinkhole and optionally a DHCP server, intended for use on a private network.</p>
-      </div>
-      <div class="bar" ref="http://miniserverhome.local:51821">
-        <p>WireGuard: fast, modern, secure VPN tunnel. WireGuard® is an extremely simple yet fast and modern VPN that utilizes state-of-the-art cryptography.</p>
-      </div>
-      <!-- Row 3 -->
-      <div class="height2 cld" ref="http://miniserverhome.local/logfiles.php">
-        <p>List of the last 10 log files uploaded by my environmental sensors.</p>
-      </div>
-	  <div class="width oth" ref="1">
-	  </div>
-	  <div class="width cld" ref="1">
-	  <p>Home Network</p>	        
-	  </div>
-      <div class="width bar" ref="3">
-	  <p>Last page</p>	        
-	  </div>
-    </div>
 
-    <!-- Page 1 -->
-    <div title="home network">
-      <div class="height3 nomargin bea" ref="http://netmon.local">
-	  <p>netmon.local</p>
-	  <img width="100%" src="data/images/netmon.png" alt="Wireguard"/>
-      </div>
-      <div class="width2 cld" ref="http://netgear.local">
-	  <p>netgear.local</p>
-	  <img width="100%" src="data/images/netgear.png" alt="Netgear D7000"/>
-      </div>
-	  <div class="height foo" ref="2">
-      </div>
-      <div class="height2 baz" ref="http://192.168.1.105">
-	  <p>Network printer</p>
-	  <img height="100%" src="data/images/printer.png" alt="Network printer"/>
-      </div>
-      <div class="width2 height2 cld" ref="http://ap.local">
-	  <p>Cisco AP</p>
-	  <img height="100%" src="data/images/ap.png" alt="Cisco AP"/>
-      </div>
-      <div class="foo">
-      </div>
-      <div class="foo">
-      </div>
-    </div>
-    
-    <div title="mobile[foo] - Current">
-      <div class="foo">
-      </div>
-    </div>
+<head>
+  <title></title>
+</head>
 
-    <div title="SQL Azure Backup">
-      <div class="cld width2 height3">
-      </div>
-      <div class="cld" ref="http://www.red-gate.com/products/dba/sql-azure-backup/">
-      </div>
-      <div class="cld">
-      </div>
-      <div class="cld">
-      </div>
+<body>
+  <!-- Page 0 -->
+  <div title="miniserverhome.local">
+    <!-- Row 1 -->
+    <div class="height2 nomargin dark cld" ref="http://miniserverhome.local:9000/">
+      <p>Portainer</p>
+      <img height="100%" src="data/images/portainer.png" alt="Portainer" />
     </div>
+    <div class="height2 nomargin dark oth" ref="http://miniserverhome.local:3000/">
+      <p>Grafana</p>
+      <img height="100%" src="data/images/grafana.png" alt="Grafana" />
+    </div>
+    <div class="height2 nomargin dark foo" ref="http://miniserverhome.local:7000/admin">
+      <p>Pi Hole</p>
+      <img height="100%" src="data/images/pihole.png" alt="Pi Hole" />
+    </div>
+    <div class="height2 nomargin bar" ref="http://miniserverhome.local:51821">
+      <p>Wireguard</p>
+      <img width="100%" src="data/images/wireguard.png" alt="Wireguard" />
+    </div>
+    <!-- Row 2 -->
+    <div class="cld" ref="http://miniserverhome.local:9000/">
+      <p>Portainer is a universal container management tool that can work with both Docker and Kubernetes to make the
+        deployment and management of containerized applications and services easier and more efficient. Portainer enjoys
+        over 650,000 users and 21,700 GitHub stars, so it's widely used and popular.</p>
+    </div>
+    <div class="oth" ref="http://miniserverhome.local:3000/">
+      <p>Grafana is a multi-platform open source analytics and interactive visualization web application. It provides
+        charts, graphs, and alerts for the web when connected to supported data sources. It can be easily installed
+        using Docker or Docker Compose.</p>
+    </div>
+    <div class="cld" ref="http://miniserverhome.local:7000/admin">
+      <p>Pi-hole is a Linux network-level advertisement and Internet tracker blocking application which acts as a DNS
+        sinkhole and optionally a DHCP server, intended for use on a private network.</p>
+    </div>
+    <div class="bar" ref="http://miniserverhome.local:51821">
+      <p>WireGuard: fast, modern, secure VPN tunnel. WireGuard® is an extremely simple yet fast and modern VPN that
+        utilizes state-of-the-art cryptography.</p>
+    </div>
+    <!-- Row 3 -->
+    <div class="height2 cld" ref="http://miniserverhome.local/logfiles.php">
+      <p>List of the last 10 log files uploaded by my environmental sensors.</p>
+    </div>
+    <div class="width oth" ref="http://miniserverhome.local/invoice.html">
+      <p>Invoice generator</p>
+    </div>
+    <div class="width cld" ref="1">
+      <p>Home Network</p>
+    </div>
+    <div class="width bar" ref="3">
+      <p>Last page</p>
+    </div>
+  </div>
 
-    <div title="Last Page">
-      <div class="width height2 nomargin">
-      </div>
-      <div class="width2">
-      </div>
-      <div class="widthHalf">
-      </div>
-      <div>
-      </div>
-      <div class="widthHalf">
-      </div>
-      <div class="width3">
-      </div>
+  <!-- Page 1 -->
+  <div title="home network">
+    <div class="height3 nomargin bea" ref="http://netmon.local">
+      <p>netmon.local</p>
+      <img width="100%" src="data/images/netmon.png" alt="Wireguard" />
     </div>
-  </body>
+    <div class="width2 cld" ref="http://netgear.local">
+      <p>netgear.local</p>
+      <img width="100%" src="data/images/netgear.png" alt="Netgear D7000" />
+    </div>
+    <div class="height foo" ref="2">
+    </div>
+    <div class="height2 baz" ref="http://192.168.1.105">
+      <p>Network printer</p>
+      <img height="100%" src="data/images/printer.png" alt="Network printer" />
+    </div>
+    <div class="width2 height2 cld" ref="http://ap.local">
+      <p>Cisco AP</p>
+      <img height="100%" src="data/images/ap.png" alt="Cisco AP" />
+    </div>
+    <div class="foo">
+    </div>
+    <div class="foo">
+    </div>
+  </div>
+
+  <div title="mobile[foo] - Current">
+    <div class="foo">
+    </div>
+  </div>
+
+  <div title="SQL Azure Backup">
+    <div class="cld width2 height3">
+    </div>
+    <div class="cld" ref="http://www.red-gate.com/products/dba/sql-azure-backup/">
+    </div>
+    <div class="cld">
+    </div>
+    <div class="cld">
+    </div>
+  </div>
+
+  <div title="Last Page">
+    <div class="width height2 nomargin">
+    </div>
+    <div class="width2">
+    </div>
+    <div class="widthHalf">
+    </div>
+    <div>
+    </div>
+    <div class="widthHalf">
+    </div>
+    <div class="width3">
+    </div>
+  </div>
+</body>
+
 </html>
