--- a/invoice.html
+++ b/invoice.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
+
 <body class="bg-gray-100 p-8">
   <div class="max-w-4xl mx-auto bg-white shadow-md rounded p-6" id="invoiceContent">
     <!-- Header -->
@@ -16,9 +18,10 @@
     </div>
     <div class="text-right mb-6">
       <p class="text-4xl font-semibold text-gray-800">Tax Invoice</p>
-      <p class="font-semibold">#<span contenteditable>10001</span><br></p><p>
-         Invoice Date: <span contenteditable id="invoiceDate"></span><br>
-Invoice Due: <span contenteditable id="invoiceDue"></span></p>
+      <p class="font-semibold">#<span contenteditable>10001</span><br></p>
+      <p>
+        Invoice Date: <span contenteditable id="invoiceDate"></span><br>
+        Invoice Due: <span contenteditable id="invoiceDue"></span></p>
     </div>
 
     <hr class="border-t border-gray-300 my-4">
@@ -80,7 +83,8 @@ Invoice Due: <span contenteditable id="invoiceDue"></span></p>
     <!-- Notes -->
     <div class="mt-4">
       <label class="block font-semibold mb-1">Notes</label>
-      <div contenteditable class="w-full p-2 border rounded h-30">Please pay to:<br>Andrey Baranov<br>BSB: 702-746<br>Account No: 400016394</div>
+      <div contenteditable class="w-full p-2 border rounded h-30">Please pay to:<br>Andrey Baranov<br>BSB:
+        702-746<br>Account No: 400016394</div>
     </div>
 
     <!-- Footer Actions -->
@@ -134,91 +138,69 @@ Invoice Due: <span contenteditable id="invoiceDue"></span></p>
       alert("GST toggle functionality not yet implemented.");
     }
 
-async function createPDF() {
-  const { jsPDF } = window.jspdf;
-  const doc = new jsPDF();
+    function createPDF() {
+      const invoice = document.querySelector("#invoiceContent");
+      const clone = invoice.cloneNode(true);
 
-  const invoice = document.querySelector("#invoiceContent");
+      // Remove buttons
+      clone.querySelectorAll("button").forEach(btn => btn.remove());
 
-  // Clone the node to avoid modifying the actual UI
-  const clone = invoice.cloneNode(true);
-  clone.style.boxShadow = "none";
-  clone.style.padding = "40px";
-  clone.style.margin = "0";
-  clone.style.background = "#ffffff";
-  clone.style.width = "800px"; // consistent width
-  clone.style.maxWidth = "none";
+      // Remove last column from table
+      clone.querySelectorAll("table thead tr").forEach(row => row.lastElementChild?.remove());
+      clone.querySelectorAll("table tbody tr").forEach(row => row.lastElementChild?.remove());
 
-  // Create a container for rendering off-screen
-  const container = document.createElement("div");
-  container.style.position = "fixed";
-  container.style.top = "-10000px";
-  container.appendChild(clone);
-  document.body.appendChild(container);
+      // Open new tab
+      const printWindow = window.open("", "_blank");
 
-  // Hide buttons in the clone
-  clone.querySelectorAll('button').forEach(btn => btn.style.display = 'none');
+      // Prepare HTML content
+      const html = `
+    <html>
+      <head>
+        <title>Invoice</title>
+        <script src="https://cdn.tailwindcss.com"></scr` + `ipt>
+        <style>
+          @media print {
+            body { margin: 0; padding: 0px; }
+          }
+        </style>
+      </head>
+      <body class="bg-white">
+        ${clone.outerHTML}
+        <script>
+          window.onload = () => {
+            window.print();
+          };
+        </scr` + `ipt>
+      </body>
+    </html>
+  `;
 
-// Remove the last column from table (Total column is last visible)
-  clone.querySelectorAll('table thead tr').forEach(row => row.lastElementChild?.remove());
-  clone.querySelectorAll('table tbody tr').forEach(row => row.lastElementChild?.remove());
-
-  // Render the clone to canvas
-  const canvas = await html2canvas(clone, {
-    backgroundColor: "#ffffff",
-    scale: 2,
-    useCORS: true
-  });
-
-  const imgData = canvas.toDataURL("image/png");
- const imgProps = await new Promise(resolve => {
-    const i = new Image();
-    i.onload = () => resolve({ width: i.width, height: i.height });
-    i.src = imgData;
-  });
-
-  const pdf = new jsPDF({ unit: 'pt', format: 'a4' });
-  const pageWidth = pdf.internal.pageSize.getWidth();
-  const pageHeight = pdf.internal.pageSize.getHeight();
-
-  const imgWidth = pageWidth;
-  const imgHeight = (imgProps.height * imgWidth) / imgProps.width;
-
-  let position = 0;
-  let heightLeft = imgHeight;
-
-  pdf.addImage(imgData, 'PNG', 0, position, imgWidth, imgHeight);
-  heightLeft -= pageHeight;
-
-  while (heightLeft > 0) {
-    position -= pageHeight;
-    pdf.addPage();
-    pdf.addImage(imgData, 'PNG', 0, position, imgWidth, imgHeight);
-    heightLeft -= pageHeight;
-  }
-
-  pdf.save("invoice.pdf");
-  document.body.removeChild(container);
+// Write and close
+printWindow.document.open();
+printWindow.document.write(html);
+printWindow.document.close();
 }
 
 
-    window.onload = () => {
-  const today = new Date();
-  const dueDate = new Date();
-  dueDate.setDate(today.getDate() + 14);
 
-  const formatDate = (date) => {
-    return date.toLocaleDateString('en-AU', {
-      day: '2-digit', month: '2-digit', year: 'numeric'
-    });
-  };
+window.onload = () => {
+const today = new Date();
+const dueDate = new Date();
+dueDate.setDate(today.getDate() + 14);
 
-  document.getElementById('invoiceDate').innerText = formatDate(today);
-  document.getElementById('invoiceDue').innerText = formatDate(dueDate);
-
-  recalculate();
+const formatDate = (date) => {
+return date.toLocaleDateString('en-AU', {
+day: '2-digit', month: '2-digit', year: 'numeric'
+});
 };
-  </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+
+document.getElementById('invoiceDate').innerText = formatDate(today);
+document.getElementById('invoiceDue').innerText = formatDate(dueDate);
+
+recalculate();
+};
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 </body>
+
 </html>
